--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Maze Test Build 2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Maze Test Build 2.data.unityweb",
-        frameworkUrl: buildUrl + "/Maze Test Build 2.framework.js.unityweb",
-        codeUrl: buildUrl + "/Maze Test Build 2.wasm.unityweb",
+        dataUrl: buildUrl + "/Maze Test Build 2.data",
+        frameworkUrl: buildUrl + "/Maze Test Build 2.framework.js",
+        codeUrl: buildUrl + "/Maze Test Build 2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Marcus Gozon",
         productName: "Infinite Maze",
